--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,7 @@ nav ul li a{
     text-transform: uppercase;
     font-size: 14px;
     color: #36226f;
+    display: block;
 }
 nav ul li a:hover{
     background-color: #36229d;
